01/k8s/1-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: otus-01
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: otus-01
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:            
        - image: docker.io/vratsev/otus-microservice-arch-01:1.0.0
          name: supercontainer
          ports:
            - containerPort: 8000          
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 20
