01/k8s/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: otus-01
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  number: 8000
            pathType: Prefix
            path: /otusapp/vladimir.ratsev/(.*)
